logs overflow fixed

--- a/client/src/styles/logs.css
+++ b/client/src/styles/logs.css
@@ -24,7 +24,8 @@
 }
 
 .user-log-table {
-    overflow-y: auto;
+    display: flex;
+    height: 90%;
 }
 
 .user-log-table table td {
